<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ericjohnson.moviecatalogue.activity.SettingActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            style="@style/CustomTextLabelSetting"
            android:text="@string/label_notification" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <TextView
                android:id="@+id/tv_daily_reminder"
                style="@style/CustomTextSubLabelSetting"
                android:layout_alignParentTop="true"
                android:text="@string/label_daily_reminder_notification" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_daily_reminder"
                android:text="@string/label_turn_on_off_daily_reminder" />

            <Switch
                android:id="@+id/sw_daily_reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <TextView
                android:id="@+id/tv_upcoming"
                style="@style/CustomTextSubLabelSetting"
                android:layout_alignParentTop="true"
                android:text="@string/label_upcoming_reminder_notification" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_upcoming"
                android:text="@string/label_turn_on_off_upcoming_reminder" />

            <Switch
                android:id="@+id/sw_upcoming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/grey" />

        <TextView
            style="@style/CustomTextLabelSetting"
            android:text="@string/label_language" />

        <LinearLayout
            android:id="@+id/ll_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <TextView
                style="@style/CustomTextSubLabelSetting"
                android:text="@string/label_change_language" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/grey" />
    </LinearLayout>
</LinearLayout>
