<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.humanid.filmreview.activity.MovieDetailActivity">

    <include
        android:id="@+id/layout_toolbar"
        layout="@layout/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/pb_movie_detail"
        style="@style/CustomProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_movie_detail_error"
        style="@style/CustomTextViewError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_failed_to_load_data"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/sv_movie_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_poster_detail"
                android:layout_width="160dp"
                android:layout_height="185dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="24dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/ib_favourite"
                app:layout_constraintStart_toEndOf="@id/iv_poster_detail"
                app:layout_constraintTop_toTopOf="@id/iv_poster_detail"
                tools:text="Title" />

            <ImageButton
                android:id="@+id/ib_favourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/ic_favorite_border"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/iv_poster_detail" />

            <TextView
                android:id="@+id/tv_label_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_release_date"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tv_title_detail"
                app:layout_constraintTop_toBottomOf="@id/tv_title_detail" />

            <TextView
                android:id="@+id/tv_release_date_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/tv_label_release_date"
                app:layout_constraintTop_toBottomOf="@id/tv_label_release_date"
                app:layout_constraintEnd_toEndOf="@id/ib_favourite"
                tools:text="date" />


            <TextView
                android:id="@+id/tv_label_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_genre"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tv_label_release_date"
                app:layout_constraintTop_toBottomOf="@id/tv_release_date_detail" />

            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintHorizontal_bias="0"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/ib_favourite"
                app:layout_constraintStart_toStartOf="@id/tv_label_genre"
                app:layout_constraintTop_toBottomOf="@id/tv_label_genre"
                tools:text="genre" />

            <TextView
                android:id="@+id/tv_label_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_language"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tv_label_genre"
                app:layout_constraintTop_toBottomOf="@id/tv_genre" />

            <TextView
                android:id="@+id/tv_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintEnd_toEndOf="@id/ib_favourite"
                app:layout_constraintStart_toStartOf="@id/tv_label_language"
                app:layout_constraintTop_toBottomOf="@id/tv_label_language"
                tools:text="language" />

            <TextView
                android:id="@+id/tv_rating_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_poster_detail"
                tools:text="8.8" />

            <View
                android:id="@+id/view_line"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:background="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_rating_detail" />

            <TextView
                android:id="@+id/tv_label_synopsis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/label_synopsis"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_line" />

            <TextView
                android:id="@+id/tv_synopsis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="@id/tv_label_synopsis"
                app:layout_constraintStart_toStartOf="@id/tv_label_synopsis"
                app:layout_constraintTop_toBottomOf="@id/tv_label_synopsis" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
